# LightFee

./: .gitignore  Cargo.toml  README.md
config/: example.toml  live.auto.toml  live.example.toml  live.repro.all-pairs-four-venues.toml  live.repro.binance-okx-intersection.toml  live.smoke.binance.exec.toml  live.smoke.bybit.exec.toml  live.smoke.exec.toml  live.smoke.toml
config/demo/: binance.json  bybit.json  hyperliquid.json  okx.json
deploy/systemd/: lightfee.service
docs/superpowers/plans/: 2026-03-20-funding-window-dual-position.md
docs/superpowers/specs/: 2026-03-20-staggered-funding-arbitrage-design.md
scripts/: ensure_cron_jobs.sh  hourly_close_reconcile.py  run_forever.sh
src/: analysis.rs  config.rs  engine.rs  journal.rs  lib.rs  main.rs  market.rs  models.rs  opportunity_source.rs  resilience.rs  simulator.rs  store.rs  strategy.rs  transfer.rs  venue.rs
src/live/: aster.rs  binance.rs  bitget.rs  bybit.rs  cache.rs  common.rs  gate.rs  hyperliquid.rs  mod.rs  okx.rs  private_ws.rs  ws.rs
tests/: engine_flow.rs  journal_analysis.rs
