[package]
name = "lightfee"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A lightweight unattended funding-arbitrage engine."

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
ethers = { version = "2.0.14", features = ["eip712", "abigen"] }
futures = "0.3"
hex = "0.4"
hmac = "0.12"
hyperliquid_rust_sdk = "0.6.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"

[dev-dependencies]
tempfile = "3.10"
